# 2025B_GR1SW_GR7

./: .gitignore  CMakeLists.txt  NightRideSimulator.cpp  OpenGL.vcxproj  OpenGL.vcxproj.filters  README.md
model/arbol/: arbol.mtl
model/casa/: casa.mtl
model/motorbike/: motorbike.mtl
model/poste_de_luz/: poste_de_luz.mtl
model/temple/: temple.mtl
shaders/: lamp.fs  shader_Examen_B2.fs  shader_Examen_B2.vs
